tests/ui/udp_no_parent.stderr
error[E0277]: the trait bound `netstack::transport::Udp: IsSafeToWrite` is not satisfied
 --> tests/ui/udp_no_parent.rs:6:25
  |
6 |     let p = Packet::new(x);
  |             ----------- ^ the trait `IsSafeToWrite` is not implemented for `netstack::transport::Udp`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `IsSafeToWrite`:
            Eth
            Stacked<U, L>
  = note: required for `Stacked<netstack::transport::Udp, [u8; 4]>` to implement `IsSafeToWrite`
note: required by a bound in `Packet::<T>::new`
 --> src/lib.rs
  |
  | impl<T: IsSafeToWrite> Packet<T> {
  |         ^^^^^^^^^^^^^ required by this bound in `Packet::<T>::new`
...
  |     pub fn new(value: T) -> Self {
  |            --- required by a bound in this associated function

error[E0277]: the trait bound `netstack::transport::Udp: IsSafeToWrite` is not satisfied
 --> tests/ui/udp_no_parent.rs:6:13
  |
6 |     let p = Packet::new(x);
  |             ^^^^^^^^^^^^^^ the trait `IsSafeToWrite` is not implemented for `netstack::transport::Udp`
  |
  = help: the following other types implement trait `IsSafeToWrite`:
            Eth
            Stacked<U, L>
  = note: required for `Stacked<netstack::transport::Udp, [u8; 4]>` to implement `IsSafeToWrite`
note: required by a bound in `Packet`
 --> src/lib.rs
  |
  | pub struct Packet<T: IsSafeToWrite> {
  |                      ^^^^^^^^^^^^^ required by this bound in `Packet`

error[E0277]: the trait bound `netstack::transport::Udp: IsSafeToWrite` is not satisfied
 --> tests/ui/udp_no_parent.rs:9:25
  |
9 |     let p = Packet::new(x);
  |             ----------- ^ the trait `IsSafeToWrite` is not implemented for `netstack::transport::Udp`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `IsSafeToWrite`:
            Eth
            Stacked<U, L>
note: required by a bound in `Packet::<T>::new`
 --> src/lib.rs
  |
  | impl<T: IsSafeToWrite> Packet<T> {
  |         ^^^^^^^^^^^^^ required by this bound in `Packet::<T>::new`
...
  |     pub fn new(value: T) -> Self {
  |            --- required by a bound in this associated function

error[E0277]: the trait bound `netstack::transport::Udp: IsSafeToWrite` is not satisfied
 --> tests/ui/udp_no_parent.rs:9:13
  |
9 |     let p = Packet::new(x);
  |             ^^^^^^^^^^^^^^ the trait `IsSafeToWrite` is not implemented for `netstack::transport::Udp`
  |
  = help: the following other types implement trait `IsSafeToWrite`:
            Eth
            Stacked<U, L>
note: required by a bound in `Packet`
 --> src/lib.rs
  |
  | pub struct Packet<T: IsSafeToWrite> {
  |                      ^^^^^^^^^^^^^ required by this bound in `Packet`
